Refactor, add detail comments